commit make appointment on half, confirmation to do

--- a/frontend1/src/assets/styles/css/MenadziranjeLRK.module.css
+++ b/frontend1/src/assets/styles/css/MenadziranjeLRK.module.css
@@ -1,4 +1,4 @@
-@keyframes fadeAnim {
+/* @keyframes fadeAnim {
     0%{
         width: 0;
         opacity: 0;
@@ -59,4 +59,4 @@
 
 .statusClass {
     background-color: red;
-}
+} */
