--- a/frontend1/src/index.css
+++ b/frontend1/src/index.css
@@ -1,227 +1,7 @@
-:root {
-  font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #E7ECEF;
-  --pro-color: #6A90BA;
-  --regular-color: #1FC3D4;
-  --prim-color: #274C77;
-  --nav-color: #e7ecef;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-/* fallback
-@font-face {
-  font-family: 'Material Symbols Outlined';
-  font-style: normal;
-  font-weight: 400;
-  src: url("/fonts/material-symbols-outlined-new.woff2") format('woff2');
-}
-
-.material-symbols-outlined {
-  font-family: 'Material Symbols Outlined';
-  font-weight: normal;
-  font-style: normal;
-  font-size: inherit;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  transition: color .35s ease-out;
-  color: inherit;
-  -moz-font-feature-settings: 'liga';
-  -moz-osx-font-smoothing: grayscale;
-} */
-
-.material-symbols-outlined {
-
-  font-variation-settings:
-      'FILL' 0,
-      'wght' 300,
-      'GRAD' 0,
-      'opsz' 20
-
-}
-.material-symbols-outlined.filled {
-  font-variation-settings:
-      'FILL' 1,
-      'wght' 300,
-      'GRAD' 0,
-      'opsz' 20
-
-}
-.material-symbols-outlined.filledArchive {
-
-  font-variation-settings:
-      'FILL' 1,
-      'wght' 400,
-      'GRAD' 0,
-      'opsz' 64
-
-}
-.MuiTypography-root:has(.material-symbols-outlined){
-
-  line-height: 0 !important;
-
-}
-
-.small-icon {
-  font-size: 20px !important;
-}
-
-
-.Mui-completed .material-symbols-outlined.light-icon {
-  color: #fff;
-  animation: none;
-}
-
-.Mui-active .material-symbols-outlined.light-icon {
-  animation: colorChanger .35s ease-out .28s both;
-}
-
 body {
-  margin: 0;
-  font-family: 'Roboto', system-ui,
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  width: 100%;
-  height: 100%;
+  background-color: transparent; /* Set body background to transparent */
 }
 
-#root,
-html {
-  height: 100%;
-  width: 100%;
+#root {
+  background-color: transparent; /* Set root element background to transparent */
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-}
-
-.nav-link {
-  display: block;
-  color: var(--prim-color);
-  background: #e3e8eb;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-
-
-.nav-link span {
-  font-size: 1.7rem;
-  color: var(--prim-color); 
-}
-
-.nav-link.active:not(.cert-link) {
-  color: var(--nav-color);
-  background: var(--prim-color);
-}
-
-.cert-link.active-cert.pki-token {
-  background: var(--regular-color) !important;
-}
-
-.cert-link.active-cert.pro-pki-token {
-  background: var(--pro-color) !important;
-}
-
-.cert-link.active-cert .pki-token-li::before {
-  content: none !important;
-  background: unset !important;
-  box-shadow: unset !important;
-}
-
-
-.nav-link.active span {
-  color: var(--nav-color);
-}
-
-
-.cert-link-styles::before {
-  box-shadow: inset 0px 20px 15px rgba(39, 76, 119, 0.16);
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 60%;
-  height: 100%;
-  z-index: 0;
-  transition: all .35s ease-out;
-  content: '';
-}
-
-
-.cf-button {
-  width: 40px;
-  height: 40px;
-  min-width: unset !important;
-  transition: width .2s ease-in !important;
-  justify-content: flex-end;
-}
-
-.cf-button .MuiButton-endIcon {
-  padding-right: 9px;
-  align-items: center;
-
-}
-
-.cf-button .MuiButton-endIcon span{
-  font-size: 1.6rem;
-}
-
-.cf-button .kontaktiraj-ne{
-  overflow: hidden;
-  opacity: 0;
-  transition: opacity .3s ease-in-out;
-  white-space: nowrap;
-}
-
-.cf-btn-container{
-  bottom: 20px;
-  right: 20px;
-  background-color: #f4c443;
-  z-index: 999;
-  border-radius: 15px;
-}
-
-.cf-btn-container:hover .cf-button{
-  width: 180px;
-}
-
-.cf-btn-container:hover .kontaktiraj-ne{
-  opacity: 1;
-}
-
-div.MuiInputBase-readOnly{
-  background: rgba(0,0,0,0.1)
-}
-/* default code */
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
